[gd_scene load_steps=4 format=3 uid="uid://bvm3k3pom2f0c"]

[ext_resource type="Theme" uid="uid://cjwibc6a6kroj" path="res://resources/themes/main.tres" id="1_gj3ju"]
[ext_resource type="Script" path="res://display_scenes/input_player_name.gd" id="2_hpabv"]
[ext_resource type="Texture2D" uid="uid://y7sjb067i3g0" path="res://resources/images/bg/BG1.png" id="2_siuuh"]

[node name="input_player_name" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gj3ju")
script = ExtResource("2_hpabv")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_siuuh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -370.0
offset_top = 276.0
offset_right = 370.0
offset_bottom = 453.0
grow_horizontal = 2
theme_override_constants/separation = 20
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Enter Your Name"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="name_edit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 25
placeholder_text = "Enter your name here..."
max_length = 30

[node name="enter_name" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "Enter"

[node name="error_msg" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.478431, 0.478431, 1)
theme_override_font_sizes/font_size = 25
text = "Enter Your Name In The Box Above!"
horizontal_alignment = 1

[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/name_edit" to="." method="_on_name_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/enter_name" to="." method="_on_enter_name_pressed"]
